# Portfolio-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
app/: main.py
app/api/: auth.py
app/api/admin/: auth.py  blog.py  comment.py  profile.py  projects.py  skills.py  upload.py
app/api/public/: blog.py  comment.py  profile.py  projects.py  skills.py
app/core/: config.py  security.py  utils.py
app/db/: dynamo.py  keys.py
app/repositories/: auth_repo.py  blog_repo.py  comment_repo.py  profile_repo.py  project_repo.py  skills_repo.py  user_repo.py
app/schemas/: auth.py  blog.py  comment.py  profile.py  project.py  skill.py  upload.py
app/services/: auth_service.py  storage.py  token.py
scripts/: seed_bio.py
tests/: conftest.py  get_opd_json.py
tests/api/admin/: test_admin_bio.py  test_blog.py  test_projects.py  test_skills.py  test_upload.py
tests/api/public/: test_drafts_api.py  test_drafts_unit.py  test_public_bio.py  test_public_blog.py  test_public_comment.py  test_public_projects.py  test_public_skills.py
